# glass-cluster

./: .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-ci.yml
glass/: __init__.py  main.py  utils.py
glass-cluster/: requirement.txt
glass-cluster/io/: input.py  input_op.py
glass-cluster/traj/: traj.py
glass/example/: example.vasp  input.json  machine.json  param.json
glass/flow/: amorphous.py
glass/glass/example/: input.json
glass/glass/io/: input.py  input_op.py
glass/io/: __init__.py  input.py  input_op.py  prepare.py
glass/property/: doas.py  doas_op.py
glass/simulation/: dp_run_op.py
glass/tests/files/: ref_lmp.data
glass/traj/: traj.py
io/: input.py  input_op.py
tests/: conftest.py
tests/files/: dump.atom_energy  silica.vasp
tests/io/: test_convert_to_lmp_data.py
tests/property/: test_get_type_index.py  test_single_parse.py
