# This file is used to configure your peoject.
# Read more about various options unter:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = glass
description = self use only
author = Shen Hong
author_email = shenh@dp.tech
